docs: update sweetbean notebook to use newest version

--- a/docs/examples/closed-loop-basic/notebooks/sweetbean.ipynb
+++ b/docs/examples/closed-loop-basic/notebooks/sweetbean.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install git+https://github.com/AutoResearch/sweetbean"
+    "!pip install sweetbean"
    ]
   },
   {
@@ -82,22 +82,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sweetbean.stimulus import TextStimulus\n",
+    "from sweetbean.stimulus import Text\n",
     "\n",
-    "introduction_welcome = TextStimulus(text='Welcome to our perception experiment.<br><br> \\\n",
+    "introduction_welcome = Text(text='Welcome to our perception experiment.<br><br> \\\n",
     "                                          Press the SPACE key to continue.',\n",
     "                                    choices=[' '])\n",
     "\n",
-    "introduction_pictures = TextStimulus(text='Each picture contains two sets of dots, one left and one right.<br><br>\\\n",
+    "introduction_pictures = Text(text='Each picture contains two sets of dots, one left and one right.<br><br>\\\n",
     "                                      Press the SPACE key to continue.',\n",
     "                                  choices=[' '])\n",
     "\n",
-    "introduction_responses = TextStimulus(text='You have to indicate whether the two sets contain an equal number of dots.<br><br>\\\n",
+    "introduction_responses = Text(text='You have to indicate whether the two sets contain an equal number of dots.<br><br>\\\n",
     "                                      Press the y-key for yes (equal number) and<br> the n-key for no (unequal number).<br><br>\\\n",
     "                                      Press the SPACE key to continue.',\n",
     "                                  choices=[' '])\n",
     "\n",
-    "introduction_note = TextStimulus(text='Note: For each picture, you have only 2 seconds to respond, so respond quickly.<br><br>\\\n",
+    "introduction_note = Text(text='Note: For each picture, you have only 2 seconds to respond, so respond quickly.<br><br>\\\n",
     "                                      You can only respond with the y and n keys while the dots are shown.<br><br> \\\n",
     "                                      Press the SPACE key to BEGIN the experiment.',\n",
     "                                  choices=[' '])"
@@ -116,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sweetbean.sequence import Block\n",
+    "from sweetbean import Block\n",
     "\n",
     "# create a list of instruction stimuli for the instruction block\n",
     "introduction_list = [introduction_welcome,\n",
@@ -144,7 +144,7 @@
    "outputs": [],
    "source": [
     "# create a text stimulus shown at the end of the experiment\n",
-    "instruction_exit = TextStimulus(duration=3000,\n",
+    "instruction_exit = Text(duration=3000,\n",
     "                                text='Thank you for participating in the experiment.',\n",
     "                                )\n",
     "\n",
@@ -177,10 +177,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sweetbean.stimulus import FixationStimulus\n",
+    "from sweetbean.stimulus import Fixation\n",
     "\n",
     "duration = 1500 # the duration is given in ms\n",
-    "fixation = FixationStimulus(duration)"
+    "fixation = Fixation(duration)"
    ]
   },
   {
@@ -203,15 +203,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sweetbean.parameter import TimelineVariable\n",
-    "from sweetbean.stimulus import RandomDotPatternsStimulus\n",
+    "from sweetbean.variable import TimelineVariable\n",
+    "from sweetbean.stimulus import RandomDotPatterns\n",
     "\n",
     "# define the stimuli features as timeline variables\n",
-    "dot_stimulus_left = TimelineVariable('dots_left', [40, 70])\n",
-    "dot_stimulus_right = TimelineVariable('dots_right', [40, 70])\n",
+    "dot_stimulus_left = TimelineVariable('dots_left')\n",
+    "dot_stimulus_right = TimelineVariable('dots_right')\n",
     "\n",
     "# We can use these variables in the stimuli declaration:\n",
-    "rdp = RandomDotPatternsStimulus(\n",
+    "rdp = RandomDotPatterns(\n",
     "    duration=2000,\n",
     "    number_of_oobs=[dot_stimulus_left, dot_stimulus_right],\n",
     "    number_of_apertures=2,\n",
@@ -242,7 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sweetbean.sequence import Block, Experiment, sequence_to_image\n",
+    "from sweetbean import Block, Experiment\n",
     "\n",
     "# define the sequence of events within a trial\n",
     "event_sequence = [fixation, rdp]\n",
@@ -293,7 +293,7 @@
     "\n",
     "The function below compiles the code above into a single function, and returns a web-based (JavaScript) experiment, written in ``jsPsych``.\n",
     "\n",
-    "The function takes a timeline, containing a sequence of trials, as input, along with the two levels for the dot stimuli."
+    "The function takes a timeline, containing a sequence of trials, as input."
    ]
   },
   {
@@ -302,29 +302,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sweetbean.stimulus import TextStimulus, FixationStimulus, RandomDotPatternsStimulus\n",
-    "from sweetbean.sequence import Block, Experiment, sequence_to_image\n",
-    "from sweetbean.parameter import TimelineVariable\n",
+    "from sweetbean.stimulus import Text, Fixation, RandomDotPatterns\n",
+    "from sweetbean import Block, Experiment\n",
+    "from sweetbean.variable import TimelineVariable\n",
     "\n",
-    "def stimulus_sequence(timeline, num_dots_1, num_dots_2):\n",
+    "def stimulus_sequence(timeline):\n",
     "\n",
     "  # INSTRUCTION BLOCK\n",
     "\n",
     "  # generate several text stimuli that serve as instructions\n",
-    "  introduction_welcome = TextStimulus(text='Welcome to our perception experiment.<br><br> \\\n",
+    "  introduction_welcome = Text(text='Welcome to our perception experiment.<br><br> \\\n",
     "                                          Press the SPACE key to continue.',\n",
     "                                    choices=[' '])\n",
     "\n",
-    "  introduction_pictures = TextStimulus(text='Each picture contains two sets of dots, one left and one right.<br><br>\\\n",
+    "  introduction_pictures = Text(text='Each picture contains two sets of dots, one left and one right.<br><br>\\\n",
     "                                       Press the SPACE key to continue.',\n",
     "                                    choices=[' '])\n",
     "\n",
-    "  introduction_responses = TextStimulus(text='You have to indicate whether the two sets contain an equal number of dots.<br><br>\\\n",
+    "  introduction_responses = Text(text='You have to indicate whether the two sets contain an equal number of dots.<br><br>\\\n",
     "                                       Press the y-key for yes (equal number) and<br> the n-key for no (unequal number).<br><br>\\\n",
     "                                       Press the SPACE key to continue.',\n",
     "                                    choices=[' '])\n",
     "\n",
-    "  introduction_note = TextStimulus(text='Note: For each picture, you have only 2 seconds to respond, so respond quickly.<br><br>\\\n",
+    "  introduction_note = Text(text='Note: For each picture, you have only 2 seconds to respond, so respond quickly.<br><br>\\\n",
     "                                       You can only respond with the y and n keys while the dots are shown.<br><br> \\\n",
     "                                       Press the SPACE key to BEGIN the experiment.',\n",
     "                                    choices=[' '])\n",
@@ -342,7 +342,7 @@
     "  # EXIT BLOCK\n",
     "\n",
     "  # create a text stimulus shown at the end of the experiment\n",
-    "  instruction_exit = TextStimulus(duration=3000,\n",
+    "  instruction_exit = Text(duration=3000,\n",
     "                                  text='Thank you for participating in the experiment.',\n",
     "                                  )\n",
     "\n",
@@ -355,14 +355,14 @@
     "  # TASK BLOCK\n",
     "\n",
     "  # define fixation cross\n",
-    "  fixation = FixationStimulus(1500)\n",
+    "  fixation = Fixation(1500)\n",
     "\n",
     "  # define the stimuli features as timeline variables\n",
-    "  dot_stimulus_left = TimelineVariable('dots_left', [num_dots_1, num_dots_2])\n",
-    "  dot_stimulus_right = TimelineVariable('dots_right', [num_dots_1, num_dots_2])\n",
+    "  dot_stimulus_left = TimelineVariable('dots_left')\n",
+    "  dot_stimulus_right = TimelineVariable('dots_right')\n",
     "\n",
     "  # We can define a stimulus as a function of those stimulus features\n",
-    "  rdp = RandomDotPatternsStimulus(\n",
+    "  rdp = RandomDotPatterns(\n",
     "      duration=2000,\n",
     "      number_of_oobs=[dot_stimulus_left, dot_stimulus_right],\n",
     "      number_of_apertures=2,\n",
