--- a/docs/tutorials/basic/Tutorial Ib Experimentalists.ipynb
+++ b/docs/tutorials/basic/Tutorial Ib Experimentalists.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +713,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 66,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
        "<matplotlib.legend.Legend at 0x732bfc69fd10>"
       ]
      },
-     "execution_count": 69,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +973,7 @@
        "<matplotlib.legend.Legend at 0x732bfc5941a0>"
       ]
      },
-     "execution_count": 74,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1126,7 +1126,7 @@
        "<matplotlib.legend.Legend at 0x732bfc449190>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1168,7 +1168,7 @@
        "<matplotlib.legend.Legend at 0x732bfc388da0>"
       ]
      },
-     "execution_count": 79,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1247,8 +1247,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
